--- a/src/app/flex-canvas/flex-canvas.component.html
+++ b/src/app/flex-canvas/flex-canvas.component.html
@@ -1,134 +1,162 @@
 <mat-sidenav-container fullscreen>
 
-   <mat-sidenav mode="side" class="sidenav" *ngIf="elementContexts">
-      <koia-chart-side-bar *ngIf="isChartContext(selectedContext)" [context]="$any(selectedContext)" [entries]="entries"
-         [elementCount]="elementContexts.length" [elementPosition]="selectedContextPosition"
-         (onElementPositionChange)="changeElementPosition($event)">
-      </koia-chart-side-bar>
-      <koia-graph-side-bar *ngIf="isGraphContext(selectedContext)" [context]="$any(selectedContext)" [entries]="entries"
-         [elementCount]="elementContexts.length" [elementPosition]="selectedContextPosition"
-         (onElementPositionChange)="changeElementPosition($event)">
-      </koia-graph-side-bar>
-      <koia-summary-table-side-bar *ngIf="isSummaryContext(selectedContext)" [context]="selectedContext"
-         [entries]="entries" [elementCount]="elementContexts.length" [elementPosition]="selectedContextPosition"
-         (onElementPositionChange)="changeElementPosition($event)">
-      </koia-summary-table-side-bar>
-   </mat-sidenav>
+  @if (elementContexts) {
+    <mat-sidenav mode="side" class="sidenav">
+      @if (isChartContext(selectedContext)) {
+        <koia-chart-side-bar [context]="$any(selectedContext)" [entries]="entries"
+          [elementCount]="elementContexts.length" [elementPosition]="selectedContextPosition"
+          (onElementPositionChange)="changeElementPosition($event)">
+        </koia-chart-side-bar>
+      }
+      @if (isGraphContext(selectedContext)) {
+        <koia-graph-side-bar [context]="$any(selectedContext)" [entries]="entries"
+          [elementCount]="elementContexts.length" [elementPosition]="selectedContextPosition"
+          (onElementPositionChange)="changeElementPosition($event)">
+        </koia-graph-side-bar>
+      }
+      @if (isSummaryContext(selectedContext)) {
+        <koia-summary-table-side-bar [context]="selectedContext"
+          [entries]="entries" [elementCount]="elementContexts.length" [elementPosition]="selectedContextPosition"
+          (onElementPositionChange)="changeElementPosition($event)">
+        </koia-summary-table-side-bar>
+      }
+    </mat-sidenav>
+  }
 
-   <mat-sidenav-content>
-      <div #header class="div_header">
-         <koia-main-toolbar [route]="route" [restoredQuery]="restoredQuery"
-            (onFilterChange)="onFilterChanged($event)"></koia-main-toolbar>
-         <mat-progress-bar *ngIf="loading" mode="indeterminate" matTooltip="Loading Data..."></mat-progress-bar>
-         <div id="view_toolbar">
-            <button mat-icon-button [matMenuTriggerFor]="moreMenu">
-               <mat-icon>more_vert</mat-icon>
-            </button>
-            <mat-menu #moreMenu="matMenu">
-               <button mat-menu-item (click)="manageViews()" [disabled]="views.length === 0">
-                  <mat-icon>monitor</mat-icon>
-                  <span>Manage Views</span>
-               </button>
-            </mat-menu>
+  <mat-sidenav-content>
+    <div #header class="div_header">
+      <koia-main-toolbar [route]="route" [restoredQuery]="restoredQuery"
+      (onFilterChange)="onFilterChanged($event)"></koia-main-toolbar>
+      @if (loading) {
+        <mat-progress-bar mode="indeterminate" matTooltip="Loading Data..."></mat-progress-bar>
+      }
+      <div id="view_toolbar">
+        <button mat-icon-button [matMenuTriggerFor]="moreMenu">
+          <mat-icon>more_vert</mat-icon>
+        </button>
+        <mat-menu #moreMenu="matMenu">
+          <button mat-menu-item (click)="manageViews()" [disabled]="views.length === 0">
+            <mat-icon>monitor</mat-icon>
+            <span>Manage Views</span>
+          </button>
+        </mat-menu>
 
-            <button id="but_print" mat-icon-button printSectionId="print-section" ngxPrint
-               matTooltip="Print current view" [disabled]="!elementContexts?.length" (click)="printView()">
-               <mat-icon>print</mat-icon>
-            </button>
-            <button mat-icon-button matTooltip="Save current view" [disabled]="!elementContexts?.length"
-               (click)="saveView()">
-               <mat-icon>save_alt</mat-icon>
-            </button>
+        <button id="but_print" mat-icon-button printSectionId="print-section" ngxPrint
+          matTooltip="Print current view" [disabled]="!elementContexts?.length" (click)="printView()">
+          <mat-icon>print</mat-icon>
+        </button>
+        <button mat-icon-button matTooltip="Save current view" [disabled]="!elementContexts?.length"
+          (click)="saveView()">
+          <mat-icon>save_alt</mat-icon>
+        </button>
 
-            <button class="but_more" mat-icon-button matTooltip="Restore saved view" [disabled]="!views.length"
-               [matMenuTriggerFor]="restoreViewMenu">
-               <mat-icon [matBadge]="views.length" [matBadgeHidden]="!views.length" matBadgeSize="small"
-                  matBadgeColor="accent">
-                  open_in_browser
-               </mat-icon>
+        <button class="but_more" mat-icon-button matTooltip="Restore saved view" [disabled]="!views.length"
+          [matMenuTriggerFor]="restoreViewMenu">
+          <mat-icon [matBadge]="views.length" [matBadgeHidden]="!views.length" matBadgeSize="small"
+            matBadgeColor="accent">
+            open_in_browser
+          </mat-icon>
+        </button>
+        <mat-menu #restoreViewMenu="matMenu">
+          @for (view of views; track view) {
+            <button class="menu_item_details" mat-menu-item (click)="loadView(view)">
+              <mat-icon>monitor</mat-icon>
+              <span>{{ view.name }} <var>{{ view.modifiedTime | date:'short' }}</var></span>
             </button>
-            <mat-menu #restoreViewMenu="matMenu">
-               <button class="menu_item_details" *ngFor="let view of views" mat-menu-item (click)="loadView(view)">
-                  <mat-icon>monitor</mat-icon>
-                  <span>{{ view.name }} <var>{{ view.modifiedTime | date:'short' }}</var></span>
-               </button>
-            </mat-menu>
+          }
+        </mat-menu>
 
-            &nbsp;&nbsp;&nbsp;
-            <button mat-icon-button matTooltip="Add Chart" (click)="addChart()">
-               <mat-icon svgIcon="add_chart"></mat-icon>
-            </button>
-            <button mat-icon-button matTooltip="Add Relationship Graph" (click)="addGraph()">
-               <mat-icon svgIcon="add_graph"></mat-icon>
-            </button>
-            <button mat-icon-button matTooltip="Add Summary" (click)="addSummaryTable()">
-               <mat-icon svgIcon="add_summary"></mat-icon>
-            </button>
-         </div>
+        &nbsp;&nbsp;&nbsp;
+        <button mat-icon-button matTooltip="Add Chart" (click)="addChart()">
+          <mat-icon svgIcon="add_chart"></mat-icon>
+        </button>
+        <button mat-icon-button matTooltip="Add Relationship Graph" (click)="addGraph()">
+          <mat-icon svgIcon="add_graph"></mat-icon>
+        </button>
+        <button mat-icon-button matTooltip="Add Summary" (click)="addSummaryTable()">
+          <mat-icon svgIcon="add_summary"></mat-icon>
+        </button>
       </div>
+    </div>
 
-      <div class="div_content">
-         <div #content class="div_flex_content printable" cdkDropList cdkDropListOrientation="mixed"
-            (cdkDropListDropped)="drop($event)">
-            @for (context of elementContexts; track context) {
-            <div #elementContainer class="div_element mat-elevation-z8" mwlResizable [enableGhostResize]="true"
-               [resizeSnapGrid]="{right: 20, bottom: 20}" [validateResize]="validateElementResize"
-               (resizeEnd)="onResizeEnd(context, $event)" cdkDrag>
-               <div class="div_element_header">
-                  <div style="display: flex">
-                     <button class="but_config" mat-icon-button [matMenuTriggerFor]="moreMenu"
-                        *ngIf="!!context.getSupportedExportFormats().length">
-                        <mat-icon>more_vert</mat-icon>
-                     </button>
-                     <mat-menu #moreMenu="matMenu">
-                        <button mat-menu-item *ngFor="let exportFormat of context.getSupportedExportFormats()"
-                           (click)="saveAs(context, exportFormat)">
-                           <mat-icon>insert_drive_file</mat-icon>
-                           <span>Save As {{ exportFormat }}</span>
-                        </button>
-                     </mat-menu>
-                     <button id="configButton" class="but_config" mat-icon-button matTooltip="Configure..."
-                        (click)="configure($event, context)">
-                        <mat-icon>settings</mat-icon>
-                     </button>
-                     <button [ngClass]="isShowResizableMargin(context) ? 'but_config_active' : 'but_config'"
-                        *ngIf="isChartContext(context)" mat-icon-button
-                        [color]="isShowResizableMargin(context) ? 'accent' : null"
-                        matTooltip="Toggle resizable chart margin"
-                        (click)="asChartContext(context).toggleShowResizableMargin()">
-                        <mat-icon>crop_free</mat-icon>
-                     </button>
-                  </div>
-                  <div class="div_title">
-                     <textarea matInput class="textarea_title" type="text" [value]="context.getTitle()"
-                        [textareaMaxRows]="2" (keyup)="context.title = $any($event.target).value"></textarea>
-                  </div>
-                  <button mat-icon-button class="but_warning" *ngIf="context.warning" [matTooltip]="context.warning"
-                     color="warn">
-                     <mat-icon>error</mat-icon>
+    <div class="div_content">
+      <div #content class="div_flex_content printable" cdkDropList cdkDropListOrientation="mixed"
+        (cdkDropListDropped)="drop($event)">
+        @for (context of elementContexts; track context) {
+          <div #elementContainer class="div_element mat-elevation-z8" mwlResizable [enableGhostResize]="true"
+            [resizeSnapGrid]="{right: 20, bottom: 20}" [validateResize]="validateElementResize"
+            (resizeEnd)="onResizeEnd(context, $event)" cdkDrag>
+            <div class="div_element_header">
+              <div style="display: flex">
+                @if (!!context.getSupportedExportFormats().length) {
+                  <button class="but_config" mat-icon-button [matMenuTriggerFor]="moreMenu"
+                    >
+                    <mat-icon>more_vert</mat-icon>
                   </button>
-                  <button *ngIf="elementContexts.length > 1" class="but_move" mat-icon-button matTooltip="Move"
-                     cdkDragHandle>
-                     <mat-icon svgIcon="move"></mat-icon>
+                }
+                <mat-menu #moreMenu="matMenu">
+                  @for (exportFormat of context.getSupportedExportFormats(); track exportFormat) {
+                    <button mat-menu-item
+                      (click)="saveAs(context, exportFormat)">
+                      <mat-icon>insert_drive_file</mat-icon>
+                      <span>Save As {{ exportFormat }}</span>
+                    </button>
+                  }
+                </mat-menu>
+                <button id="configButton" class="but_config" mat-icon-button matTooltip="Configure..."
+                  (click)="configure($event, context)">
+                  <mat-icon>settings</mat-icon>
+                </button>
+                @if (isChartContext(context)) {
+                  <button [ngClass]="isShowResizableMargin(context) ? 'but_config_active' : 'but_config'"
+                    mat-icon-button
+                    [color]="isShowResizableMargin(context) ? 'accent' : null"
+                    matTooltip="Toggle resizable chart margin"
+                    (click)="asChartContext(context).toggleShowResizableMargin()">
+                    <mat-icon>crop_free</mat-icon>
                   </button>
-                  <button class="but_close" mat-icon-button matTooltip="Delete" (click)="removeElement(context)">
-                     <mat-icon>delete_forever</mat-icon>
-                  </button>
-               </div>
-               <koia-summary-table *ngIf="isSummaryContext(context)" [context]="context"
-                  (onRemove)="removeElement($any($event))">
-               </koia-summary-table>
-               <koia-chart *ngIf="isChartContext(context)" [context]="$any(context)"
-                  (onRemove)="removeElement($any($event))" (onWarning)="notifyWarning($event)">
-               </koia-chart>
-               <koia-graph *ngIf="isGraphContext(context)" [context]="$any(context)"
-                  (onRemove)="removeElement($any($event))" (onWarning)="notifyWarning($event)">
-               </koia-graph>
-               <img src="./assets/resize-handle.gif" class="resize-handle" mwlResizeHandle
-                  [resizeEdges]="resizableEdgesOf(context)">
+                }
+              </div>
+              <div class="div_title">
+                <textarea matInput class="textarea_title" type="text" [value]="context.getTitle()"
+                [textareaMaxRows]="2" (keyup)="context.title = $any($event.target).value"></textarea>
+              </div>
+              @if (context.warning) {
+                <button mat-icon-button class="but_warning" [matTooltip]="context.warning"
+                  color="warn">
+                  <mat-icon>error</mat-icon>
+                </button>
+              }
+              @if (elementContexts.length > 1) {
+                <button class="but_move" mat-icon-button matTooltip="Move"
+                  cdkDragHandle>
+                  <mat-icon svgIcon="move"></mat-icon>
+                </button>
+              }
+              <button class="but_close" mat-icon-button matTooltip="Delete" (click)="removeElement(context)">
+                <mat-icon>delete_forever</mat-icon>
+              </button>
             </div>
+            @if (isSummaryContext(context)) {
+              <koia-summary-table [context]="context"
+                (onRemove)="removeElement($any($event))">
+              </koia-summary-table>
             }
-         </div>
+            @if (isChartContext(context)) {
+              <koia-chart [context]="$any(context)"
+                (onRemove)="removeElement($any($event))" (onWarning)="notifyWarning($event)">
+              </koia-chart>
+            }
+            @if (isGraphContext(context)) {
+              <koia-graph [context]="$any(context)"
+                (onRemove)="removeElement($any($event))" (onWarning)="notifyWarning($event)">
+              </koia-graph>
+            }
+            <img src="./assets/resize-handle.gif" class="resize-handle" mwlResizeHandle
+              [resizeEdges]="resizableEdgesOf(context)">
+            </div>
+          }
+        </div>
       </div>
-   </mat-sidenav-content>
-</mat-sidenav-container>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
