--- a/src/app/pivot-table/pivot-table.component.html
+++ b/src/app/pivot-table/pivot-table.component.html
@@ -3,11 +3,13 @@
   <mat-sidenav mode="push" class="sidenav" (openedStart)="onSidenavOpening()" (closedStart)="onSidenavClosing()">
     <koia-pivot-table-side-bar [columns]="columns" [context]="context" [data]="baseDataFrame" />
   </mat-sidenav>
-  
+
   <mat-sidenav-content>
     <div #header class="div_header">
       <koia-main-toolbar [route]="route" [restoredQuery]="restoredQuery" (onFilterChange)="fetchData($event)" />
-      <mat-progress-bar *ngIf="loading" mode="indeterminate" matTooltip="Loading Data..." />
+      @if (loading) {
+        <mat-progress-bar mode="indeterminate" matTooltip="Loading Data..." />
+      }
       <div id="view_toolbar">
 
         <button mat-icon-button [matMenuTriggerFor]="moreMenu">
@@ -37,7 +39,7 @@
         </mat-menu>
 
         <button id="but_print" mat-icon-button printSectionId="print-section" ngxPrint
-                matTooltip="Print current view" (click)="printView()">
+          matTooltip="Print current view" (click)="printView()">
           <mat-icon>print</mat-icon>
         </button>
 
@@ -51,37 +53,45 @@
           </mat-icon>
         </button>
         <mat-menu #restoreViewMenu="matMenu">
-          <button class="menu_item_details" *ngFor="let record of configRecords" mat-menu-item (click)="loadConfig(record)">
-            <mat-icon>monitor</mat-icon>
-            <span>{{ record.name }} <var>{{ record.modifiedTime | date:'short' }}</var></span>
-          </button>
+          @for (record of configRecords; track record) {
+            <button class="menu_item_details" mat-menu-item (click)="loadConfig(record)">
+              <mat-icon>monitor</mat-icon>
+              <span>{{ record.name }} <var>{{ record.modifiedTime | date:'short' }}</var></span>
+            </button>
+          }
         </mat-menu>
 
         &nbsp;&nbsp;&nbsp;
-        <button class="but_config" *ngIf="allowsForValueGrouping" mat-icon-button
-                matTooltip="Define Value Grouping..." (click)="sidenav.open()">
-          <mat-icon [matBadge]="context.valueGroupings.length === 0 ? 'G' : context.valueGroupings.length"
-                    matBadgeSize="small" [matBadgeColor]="context.valueGroupings.length === 0 ? 'primary' : 'accent'">group_work
-          </mat-icon>
-        </button>
+        @if (allowsForValueGrouping) {
+          <button class="but_config" mat-icon-button
+            matTooltip="Define Value Grouping..." (click)="sidenav.open()">
+            <mat-icon [matBadge]="context.valueGroupings.length === 0 ? 'G' : context.valueGroupings.length"
+              matBadgeSize="small" [matBadgeColor]="context.valueGroupings.length === 0 ? 'primary' : 'accent'">group_work
+            </mat-icon>
+          </button>
+        }
 
         <button class="but_config" mat-icon-button [matMenuTriggerFor]="timeColumnMenu"
-                matTooltip="Time Unit Grouping">
+          matTooltip="Time Unit Grouping">
           <mat-icon>timer</mat-icon>
         </button>
         <mat-menu #timeColumnMenu="matMenu">
-          <button *ngFor="let column of timeColumns" mat-menu-item [matMenuTriggerFor]="timeUnitMenu"
-                  [matMenuTriggerData]="{ column: column }">{{ column.name }}</button>
+          @for (column of timeColumns; track column) {
+            <button mat-menu-item [matMenuTriggerFor]="timeUnitMenu"
+            [matMenuTriggerData]="{ column: column }">{{ column.name }}</button>
+          }
         </mat-menu>
         <mat-menu #timeUnitMenu="matMenu">
           <ng-template matMenuContent let-column="column">
-            <button *ngFor="let timeUnit of timeUnits" mat-menu-item [disabled]="timeUnit === column.groupingTimeUnit"
-                    (click)="onTimeUnitChanged(column, timeUnit)">{{ timeUnit }}</button>
+            @for (timeUnit of timeUnits; track timeUnit) {
+              <button mat-menu-item [disabled]="timeUnit === column.groupingTimeUnit"
+              (click)="onTimeUnitChanged(column, timeUnit)">{{ timeUnit }}</button>
+            }
           </ng-template>
         </mat-menu>
 
         <button class="but_config" mat-icon-button [matMenuTriggerFor]="heatmapColorsMenu"
-                matTooltip="Heatmap Colors">
+          matTooltip="Heatmap Colors">
           <mat-icon>color_lens</mat-icon>
         </button>
         <mat-menu #heatmapColorsMenu="matMenu">
@@ -89,26 +99,32 @@
           <button mat-menu-item [matMenuTriggerFor]="colorsPositiveValsMenu">Positive Values</button>
         </mat-menu>
         <mat-menu #colorsNegativeValsMenu="matMenu">
-          <button *ngFor="let color of contextFactory.colors" mat-menu-item [disabled]="color === context.negativeColor"
-                  (click)="onNegativeColorChanged(color)">
-            <span [class]="'span_color' + (color === context.negativeColor ? '_inactive' : '')"
-                  [ngStyle]="{'background-color':color}"></span>
-          </button>
+          @for (color of contextFactory.colors; track color) {
+            <button mat-menu-item [disabled]="color === context.negativeColor"
+              (click)="onNegativeColorChanged(color)">
+              <span [class]="'span_color' + (color === context.negativeColor ? '_inactive' : '')"
+              [ngStyle]="{'background-color':color}"></span>
+            </button>
+          }
         </mat-menu>
         <mat-menu #colorsPositiveValsMenu="matMenu">
-          <button *ngFor="let color of contextFactory.colors" mat-menu-item [disabled]="color === context.positiveColor"
-                  (click)="onPositiveColorChanged(color)">
-            <span [class]="'span_color' + (color === context.positiveColor ? '_inactive' : '')"
-                  [ngStyle]="{'background-color':color}"></span>
-          </button>
+          @for (color of contextFactory.colors; track color) {
+            <button mat-menu-item [disabled]="color === context.positiveColor"
+              (click)="onPositiveColorChanged(color)">
+              <span [class]="'span_color' + (color === context.positiveColor ? '_inactive' : '')"
+              [ngStyle]="{'background-color':color}"></span>
+            </button>
+          }
         </mat-menu>
       </div>
     </div>
 
     <div #content class="div_content div_table mat-elevation-z8">
-      <mat-progress-bar *ngIf="computing" mode="indeterminate" color="accent"></mat-progress-bar>
+      @if (computing) {
+        <mat-progress-bar mode="indeterminate" color="accent"></mat-progress-bar>
+      }
       <div class="printable" #pivot id="pivot"></div>
     </div>
-  
-</mat-sidenav-content>
+
+  </mat-sidenav-content>
 </mat-sidenav-container>
