--- a/src/app/shared/component/manage-config-dialog/manage-config-dialog.component.html
+++ b/src/app/shared/component/manage-config-dialog/manage-config-dialog.component.html
@@ -8,23 +8,25 @@
     <h4>Manage saved views</h4>
     <p>Delete or rename views that have previously been saved.</p>
     <div id="div_config_records">
-      <ng-container *ngFor="let item of items; let i = index">
-        <div class="div_row" *ngIf="!item.deleted">
-          <button [id]="'butDelete-' + i" mat-icon-button (click)="deleteItem(item)">
-            <mat-icon>delete_forever</mat-icon>
-          </button>
-          <mat-icon>monitor</mat-icon>&nbsp;
-          <input [(ngModel)]="item.configRecord.name" (ngModelChange)="onChange()" required
-            [maxlength]="viewNameMaxLength" />
-          <var>{{ item.configRecord.modifiedTime | date:'short' }}</var>
-        </div>
-      </ng-container>
-    </div>
-    <div id="div_buttons">
-      <button id="but_cancel" mat-raised-button [color]="changed ? null : 'primary'"
+      @for (item of items; track item; let i = $index) {
+        @if (!item.deleted) {
+          <div class="div_row">
+            <button [id]="'butDelete-' + i" mat-icon-button (click)="deleteItem(item)">
+              <mat-icon>delete_forever</mat-icon>
+            </button>
+            <mat-icon>monitor</mat-icon>&nbsp;
+            <input [(ngModel)]="item.configRecord.name" (ngModelChange)="onChange()" required
+              [maxlength]="viewNameMaxLength" />
+              <var>{{ item.configRecord.modifiedTime | date:'short' }}</var>
+            </div>
+          }
+        }
+      </div>
+      <div id="div_buttons">
+        <button id="but_cancel" mat-raised-button [color]="changed ? null : 'primary'"
         (click)="dialogRef.close()">Cancel</button>
-      <button id="but_ok" mat-raised-button [color]="changed ? 'primary' : null" [disabled]="!changed"
+        <button id="but_ok" mat-raised-button [color]="changed ? 'primary' : null" [disabled]="!changed"
         (click)="butOkPressed()">OK</button>
-    </div>
-  </mat-card-content>
-</mat-card>
+      </div>
+    </mat-card-content>
+  </mat-card>
