--- a/src/app/shared/component/view-launcher-dialog/view-launcher-dialog.component.html
+++ b/src/app/shared/component/view-launcher-dialog/view-launcher-dialog.component.html
@@ -5,20 +5,26 @@
   </mat-card-header>
 
   <mat-card-content>
-    <span *ngIf="context.views?.length > 0">
-      <h4>Restore saved view</h4>
-      <p>Load a view that has previously been saved.</p>
-      <div id="div_views">
-        <div class="div_row" *ngFor="let view of context.views">
-          <button mat-icon-button (click)="context.loadView(view); dialogRef.close()">
-            <mat-icon>monitor</mat-icon>
-          </button>
-          <span>&nbsp;{{ view.name }} <var>{{ view.modifiedTime | date:'short' }}</var></span>
+    @if (context.views?.length > 0) {
+      <span>
+        <h4>Restore saved view</h4>
+        <p>Load a view that has previously been saved.</p>
+        <div id="div_views">
+          @for (view of context.views; track view) {
+            <div class="div_row">
+              <button mat-icon-button (click)="context.loadView(view); dialogRef.close()">
+                <mat-icon>monitor</mat-icon>
+              </button>
+              <span>&nbsp;{{ view.name }} <var>{{ view.modifiedTime | date:'short' }}</var></span>
+            </div>
+          }
         </div>
-      </div>
-    </span>
+      </span>
+    }
 
-    <h4 *ngIf="context.views?.length > 0">Create new view</h4>
+    @if (context.views?.length > 0) {
+      <h4>Create new view</h4>
+    }
     <p>Choose the initial element to be added to the new view.</p>
     <div class="div_row">
       <button mat-icon-button (click)="context.addChart(); dialogRef.close()">
