--- a/src/app/summary-table/summary-table.component.html
+++ b/src/app/summary-table/summary-table.component.html
@@ -1,34 +1,43 @@
-<mat-progress-bar *ngIf="computing" mode="indeterminate" color="accent"></mat-progress-bar>
+@if (computing) {
+  <mat-progress-bar mode="indeterminate" color="accent"></mat-progress-bar>
+}
 <div id="div_table">
-  <table mat-table *ngIf="frameData && rowSpans" [dataSource]="frameData" matSort (matSortChange)="sort($event)"
-    [matSortActive]="currentSort.active" [matSortDirection]="currentSort.direction">
-
-    <ng-container [matColumnDef]="column"
-      *ngFor="let column of frameColumns.slice(0, - overalls.length); let iCol = index">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ column }}</th>
-      <td *matCellDef="let entry; let iRow = index" [attr.rowspan]="rowSpans[iCol][iRow].span"
-        [style.display]="rowSpans[iCol][iRow].span === 0 ? 'none'  : ''">{{ formattedValueOf(iCol, entry[column]) }}
-      </td>
-      <td mat-footer-cell *matFooterCellDef>{{iCol === frameColumns.length - overalls.length - 1 ? 'Overall' : '' }}
-      </td>
-    </ng-container>
-
-    <ng-container [matColumnDef]="aggregation" *ngFor="let aggregation of context.aggregations; let iCol = index">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ aggregation }}</th>
-      <td class="td_aggregation" *matCellDef="let entry">
-        <span *ngIf="aggregation !== 'Count' || context.isAnyColumnWithValueGroupingInUse()">
-          {{ entry[aggregation] | number }}
-        </span>
-        <a *ngIf="aggregation === 'Count' && !context.isAnyColumnWithValueGroupingInUse()"
-          (click)="onAggregationCellClick(entry)" matTooltip="Show Data...">
-          {{ entry[aggregation] | number }}
-        </a>
-      </td>
-      <td mat-footer-cell *matFooterCellDef>{{ overalls[iCol] | number }}</td>
-    </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="frameColumns; sticky: true"></tr>
-    <tr mat-row *matRowDef="let entry; columns: frameColumns"></tr>
-    <tr mat-footer-row *matFooterRowDef="frameColumns; sticky: true"></tr>
-  </table>
+  @if (frameData && rowSpans) {
+    <table mat-table [dataSource]="frameData" matSort (matSortChange)="sort($event)"
+      [matSortActive]="currentSort.active" [matSortDirection]="currentSort.direction">
+      @for (column of frameColumns.slice(0, - overalls.length); track column; let iCol = $index) {
+        <ng-container [matColumnDef]="column"
+          >
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ column }}</th>
+          <td *matCellDef="let entry; let iRow = index" [attr.rowspan]="rowSpans[iCol][iRow].span"
+            [style.display]="rowSpans[iCol][iRow].span === 0 ? 'none'  : ''">{{ formattedValueOf(iCol, entry[column]) }}
+          </td>
+          <td mat-footer-cell *matFooterCellDef>{{iCol === frameColumns.length - overalls.length - 1 ? 'Overall' : '' }}
+          </td>
+        </ng-container>
+      }
+      @for (aggregation of context.aggregations; track aggregation; let iCol = $index) {
+        <ng-container [matColumnDef]="aggregation">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ aggregation }}</th>
+          <td class="td_aggregation" *matCellDef="let entry">
+            @if (aggregation !== 'Count' || context.isAnyColumnWithValueGroupingInUse()) {
+              <span>
+                {{ entry[aggregation] | number }}
+              </span>
+            }
+            @if (aggregation === 'Count' && !context.isAnyColumnWithValueGroupingInUse()) {
+              <a
+                (click)="onAggregationCellClick(entry)" matTooltip="Show Data...">
+                {{ entry[aggregation] | number }}
+              </a>
+            }
+          </td>
+          <td mat-footer-cell *matFooterCellDef>{{ overalls[iCol] | number }}</td>
+        </ng-container>
+      }
+      <tr mat-header-row *matHeaderRowDef="frameColumns; sticky: true"></tr>
+      <tr mat-row *matRowDef="let entry; columns: frameColumns"></tr>
+      <tr mat-footer-row *matFooterRowDef="frameColumns; sticky: true"></tr>
+    </table>
+  }
 </div>
